SetUp DataStore preferences + operations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BorutoAndroidCompose</string>
     <string name="app_logo">App Logo</string>
     <string name="onboarding_image">Onboarding image</string>
+    <string name="finish">Finish</string>
 </resources>
