--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="search_icon_content_description">Search icon</string>
 
     <string name="star_path">M14,21.288,21.416,26l-1.968-8.88L26,11.145l-8.628-.771L14,2l-3.372,8.375L2,11.145,8.552,17.12,6.584,26Z</string>
+
+    <!-- Content description for images/icons -->
     <string name="hero_image_content_description">Hero Image</string>
     <string name="network_error_icon_content_description">Network Error Icon</string>
+    <string name="close_icon_content_description">Close Icon</string>
 </resources>
