--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="hero_image_content_description">Hero Image</string>
     <string name="network_error_icon_content_description">Network Error Icon</string>
     <string name="close_icon_content_description">Close Icon</string>
+
+    <!-- Titles -->
+    <string name="about">About</string>
+    <string name="family">Family</string>
+    <string name="abilities">Abilities</string>
+    <string name="nature_types">Nature Types</string>
 </resources>
